--- a/website/index.html
+++ b/website/index.html
@@ -60,7 +60,7 @@
         <h1>Hi, I am <span class="about__name">Jalen Cheng.</span></h1>
         <h2><div id="name"></div></h2>
         <p class="about__desc">
-          As a computer engineering student at the University of Waterloo, I strive to challenge myself and drive an impact in the world. <span class="about__name">Take a look around.</span>
+          As a computer engineering student at the University of Waterloo, I strive to challenge myself and drive real impact in the world. <span class="about__name">Take a look around.</span>
         </p>
 
         <div class="about__contact center">
@@ -192,9 +192,9 @@
           <li class="skills__list-item btn btn--plain">React</li>
           <li class="skills__list-item btn btn--plain">Figma</li>
           <li class="skills__list-item btn btn--plain">Git</li>
-          <li class="skills__list-item btn btn--plain">OpenAPI</li>
-          <li class="skills__list-item btn btn--plain">CloudAPI</li>
-          <li class="skills__list-item btn btn--plain">PicsArtAPI</li>
+          <li class="skills__list-item btn btn--plain">OpenAI API</li>
+          <li class="skills__list-item btn btn--plain">Cloud API</li>
+          <li class="skills__list-item btn btn--plain">PicsArt API</li>
         </ul>
       </section>
 
