--- a/website/index.html
+++ b/website/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!doctype html> <!--Fix Skills CSS-->
 <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 <html lang="en">
   <head>
@@ -11,18 +11,14 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <script
-      src="https://kit.fontawesome.com/fa62c117c7.js"
-      crossorigin="anonymous"
-    ></script>
     <link rel="stylesheet" href="styles.css" />
-    <title>Jalen Cheng</title>
-    <link rel="icon" type="image/x-icon" href="faviconv1.png">
+    <title>Home</title>
+    <link rel="icon" type="image/x-icon" href="attachments/faviconv1.png">
   </head>
   <body class="dark" id="top">
     <header class="header center">
       <h3>
-        <a href="javascript:window.location.reload(true)" class="link"
+        <a href="./index.html" class="link"
           >JC.</a
         >
       </h3>
@@ -30,13 +26,16 @@
       <nav class="nav center">
         <ul class="nav__list center">
           <li class="nav__list-item">
-            <a class="link link--nav" href="#projects">Projects</a>
+            <a class="link link--nav" href="./experience.html">Experience</a>
           </li>
           <li class="nav__list-item">
-            <a class="link link--nav" href="#skills">Skills</a>
+            <a class="link link--nav" href="./projects.html">Projects</a>
           </li>
           <li class="nav__list-item">
-            <a class="link link--nav" href="#contact">Contact</a>
+            <a class="link link--nav" href="./about.html">About</a>
+          </li>
+          <li class="nav__list-item">
+            <a class="link link--nav" href="mailto:jalen.cheng@uwaterloo.ca">Contact</a>
           </li>
         </ul>
 
@@ -64,7 +63,7 @@
         </p>
 
         <div class="about__contact center">
-          <a href="resume.pdf" target="_blank">
+          <a href="attachments/resume.pdf" target="_blank">
             <span class="btn btn--outline">Resume</span>
           </a>
 
@@ -85,127 +84,40 @@
           </a>
         </div>
       </div>
-
-      <!-- Projects -->
-      <section id="projects" class="section projects">
-        <h2 class="section__title">Projects</h2>
-
-        <div class="projects__grid"> <!--What's on my mind: Building, Learning, Growing-->
-          <div class="project">
-            <h3>EasyASL</h3>
-            <p class="project__description">
-              Hackathon winner accomplished within 36 hours. 
-              EasyASL provides a comprehensive tool for the hard-of-hearing community and other individuals who use American Sign Language (ASL). 
-              EasyASL makes it easy for you to learn, translate, and get certified in ASL.
-            </p>
-            <ul class="project__stack">
-              <li class="project__stack-item">HTML</li>
-              <li class="project__stack-item">Next.js</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
-              <li class="project__stack-item">Figma</li>
-            </ul>
-
-            <a
-              href="https://github.com/azselim/EasyASL"
-              aria-label="source code"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fab fa-github"></i>
-            </a>
-            <a
-              href="https://devpost.com/software/easyasl"
-              aria-label="live preview"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-            </a>
-          </div>
-
-          <div class="project">
-            <h3>IFDAA (in progress)</h3>
-            <p class="project__description">
-              Personal project completed for ECE198 course. The Intelligent Fall Detection Alert Apparatus (IFDAA) provides a robust, cost-effective solution for at-risk individuals.
-              As an AIO patient care device, it can successfully detect, communicate and log falls for optimal wellbeing. Developed using 2 STM32F401RE Nucleo boards and a custom-modelled case. 
-
-            </p>
-            <ul class="project__stack">
-              <li class="project__stack-item">C++</li>
-              <li class="project__stack-item">AutoDesk Fusion</li>
-              <li class="project__stack-item">draw.io</li>
-            </ul>
-
-            <a
-              href="https://github.com"
-              aria-label="source code"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fab fa-github"></i>
-            </a>
-            <a
-              href="https://example.com"
-              aria-label="live preview"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-            </a>
-          </div>
-
-          <div class="project">
-            <h3>Project 3</h3>
-            <p class="project__description">
-              Announcement 11/11/24
-            </p>
-            <ul class="project__stack">
-              <li class="project__stack-item">???</li>
-              <li class="project__stack-item">???</li>
-              <li class="project__stack-item">???</li>
-            </ul>
-
-            <a
-              href="https://github.com"
-              aria-label="source code"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fab fa-github"></i>
-            </a>
-            <a
-              href="https://example.com"
-              aria-label="live preview"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-            </a>
-          </div>
-        </div>
-      </section>
-
-      <!-- Skills -->
-      <section class="section skills" id="skills"> <!--Soft skills-->
-        <h2 class="section__title">Skills</h2>
-        <ul class="skills__list">
-          <li class="skills__list-item btn btn--plain">C++</li>
-          <li class="skills__list-item btn btn--plain">HTML</li>
-          <li class="skills__list-item btn btn--plain">CSS</li>
-          <li class="skills__list-item btn btn--plain">JavaScript</li>
-          <li class="skills__list-item btn btn--plain">TypeScript</li>
-          <li class="skills__list-item btn btn--plain">React</li>
-          <li class="skills__list-item btn btn--plain">Figma</li>
-          <li class="skills__list-item btn btn--plain">Git</li>
-          <li class="skills__list-item btn btn--plain">OpenAI API</li>
-          <li class="skills__list-item btn btn--plain">Cloud API</li>
-          <li class="skills__list-item btn btn--plain">PicsArt API</li>
-        </ul>
-      </section>
-
-      <!-- Contact -->
-      <section class="section contact center" id="contact">
-        <h2 class="section__title"> Contact </h2>
-          <a href="mailto:jalen.cheng@uwaterloo.ca">
-            <span class="btn btn--outline">Email me</span>
-          </a>
-      </section>
     </main>
+
+  <section class="section" id="hep">
+    <h2 class="section__title">my priorities</h2>
+
+    <div class="hep__grid">
+        <a href = "experience.html">
+          <div class="hep">
+            <h3>growing.</h3>
+            <p class="hep__description">
+              How can I leverage my work experience for success?
+            </p>
+          </div>
+        </a>
+
+      <a href = "projects.html">
+        <div class="hep">
+          <h3>creating.</h3>
+          <p class="hep__description">
+            How can I apply my learned knowledge to innovate?
+          </p>
+        </div>
+      </a>
+
+      <a href = "about.html">
+          <div class="hep">
+            <h3>improving.</h3>
+            <p class="hep__description">
+              How can I better myself to make the future brighter?
+            </p>
+          </div>
+        </a>
+    </div>
+  </section>
 
     <footer class="footer">
       <a
@@ -227,6 +139,3 @@
     <script src="./script.js"></script>
   </body>
 </html>
-
-<!--Personal Section Page-->
-<!--Fade Effects-->
