--- a/website/about.html
+++ b/website/about.html
@@ -62,9 +62,8 @@
       <h2 class="section__title">About Me</h2>
 
       <div class="about__container">
-        <!-- Replace 'myheadshot.jpg' with your actual headshot filename -->
         <img
-          src="attachments/myheadshot.jpg"
+          src="attachments/headshot.png"
           alt="Headshot of me"
           class="about__image"
         />
@@ -77,7 +76,7 @@
             impact, diving into creative side projects, and constantly honing my
             technical & soft skills to stay at the forefront of the tech world.
             Outside of coding, I enjoy [insert personal hobbies/interests here].
-            Feel free to reach out!
+            Feel free to reach out! 
           </p>
         </div>
       </div>
