--- a/website/index.html
+++ b/website/index.html
@@ -63,7 +63,7 @@
         </p>
 
         <div class="about__contact center">
-          <a href="attachments/resume.pdf" target="_blank">
+          <a href="attachments/Cheng, Jalen Resume.pdf" target="_blank">
             <span class="btn btn--outline">Resume</span>
           </a>
 
