--- a/website/about.html
+++ b/website/about.html
@@ -75,8 +75,8 @@
             interests include building software tools that drive real-world
             impact, diving into creative side projects, and constantly honing my
             technical & soft skills to stay at the forefront of the tech world.
-            Outside of coding, I enjoy [insert personal hobbies/interests here].
-            Feel free to reach out! 
+            Outside of coding, I'm really passionate about staying active. I play
+            6 sports, and am always open to trying new things. Feel free to reach out! heeee
           </p>
         </div>
       </div>
