--- a/website/index.html
+++ b/website/index.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <script
+    src="https://kit.fontawesome.com/fa62c117c7.js"
+    crossorigin="anonymous"
+  ></script>
     <link rel="stylesheet" href="styles.css" />
     <title>Home</title>
     <link rel="icon" type="image/x-icon" href="attachments/faviconv1.png">
@@ -87,8 +91,6 @@
     </main>
 
   <section class="section" id="hep">
-    <h2 class="section__title">my priorities</h2>
-
     <div class="hep__grid">
         <a href = "experience.html">
           <div class="hep">
