--- a/website/projects.html
+++ b/website/projects.html
@@ -1,5 +1,4 @@
 <!doctype html>
-<script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -22,9 +21,7 @@
   <body class="dark" id="top">
     <header class="header center">
       <h3>
-        <a href="./index.html" class="link"
-          >JC.</a
-        >
+        <a href="./index.html" class="link">JC.</a>
       </h3>
 
       <nav class="nav center">
@@ -39,7 +36,9 @@
             <a class="link link--nav" href="./about.html">About</a>
           </li>
           <li class="nav__list-item">
-            <a class="link link--nav" href="mailto:jalen.cheng@uwaterloo.ca">Contact</a>
+            <a class="link link--nav" href="mailto:jalen.cheng@uwaterloo.ca"
+              >Contact</a
+            >
           </li>
         </ul>
 
