Major production update (v2)

--- a/website/about.html
+++ b/website/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Portfolio" />
+    <meta name="description" content="portfolio" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,36 +15,36 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles.css" />
-    <title>About</title>
-    <link rel="icon" type="image/x-icon" href="attachments/faviconv1.png">
+    <title>about</title>
+    <link rel="icon" type="image/x-icon" href="attachments/favlight.png">
   </head>
 
-  <body class="dark" id="top">
+  <body class="light" id="top">
     <header class="header center">
       <h3>
-        <a href="./index.html" class="link">JC.</a>
+        <a href="./index.html" class="link">jc.</a>
       </h3>
 
       <nav class="nav center">
         <ul class="nav__list center">
           <li class="nav__list-item">
-            <a class="link link--nav" href="./experience.html">Experience</a>
+            <a class="link link--nav" href="./experience.html">experience</a>
           </li>
           <li class="nav__list-item">
-            <a class="link link--nav" href="./projects.html">Projects</a>
+            <a class="link link--nav" href="./projects.html">projects</a>
           </li>
           <li class="nav__list-item">
-            <a class="link link--nav" href="./about.html">About</a>
+            <a class="link link--nav" href="./about.html">about</a>
           </li>
           <li class="nav__list-item">
             <a class="link link--nav" href="mailto:jalen.cheng@uwaterloo.ca"
-              >Contact</a
+              >contact</a
             >
           </li>
         </ul>
 
         <button type="button" aria-label="toggle theme" class="btn btn--icon">
-          <i aria-hidden="true" id="btn-theme" class="fas fa-moon"></i>
+          <i aria-hidden="true" id="btn-theme" class="fas fa-sun"></i>
         </button>
 
         <button
@@ -59,25 +59,24 @@
 
     <!-- ABOUT SECTION -->
     <section class="section fade-in">
-      <h2 class="section__title">About Me</h2>
+      <h2 class="section__title">about</h2>
 
       <div class="about__container">
         <img
           src="attachments/headshot.png"
-          alt="Headshot of me"
+          alt="headshot of me"
           class="about__image"
         />
 
         <div class="about__content">
-          <p class="about__desc">
-            Hello! I’m a Computer Engineering student at the University of
-            Waterloo, passionate about leveraging technology to innovate. My
-            interests include building software tools that drive real-world
-            impact, diving into creative side projects, and constantly honing my
-            technical & soft skills to stay at the forefront of the tech world.
-            Outside of coding, I'm really passionate about staying active. I play
-            6 sports, and am always open to trying new things. Feel free to reach out! heeee
-          </p>
+          <div class="about-box hep">
+            <h3>hey! nice to meet you.</h3>
+            <p class="about__desc">
+              so at least my website didn't break if you're seeing this... i'm jalen, a computer engineering student at the university of
+              waterloo, passionate about leveraging technology to innovate and break the mold. beyond that, i'm really big on staying active. 
+              i play 6 sports, and am always looking to trying new things (whatever they may be). if you're interested or even just want to talk, please reach out. i'd love to chat!
+            </p>
+          </div>
         </div>
       </div>
     </section>
@@ -87,7 +86,7 @@
         href="https://github.com/jalen-cheng/website"
         class="link footer__link"
       >
-        Created By Jalen Cheng
+        created by jalen cheng
       </a>
     </footer>
 
