--- a/website/index.html
+++ b/website/index.html
@@ -1,10 +1,10 @@
-<!doctype html> <!--Fix Skills CSS-->
+<!doctype html>
 <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Portfolio" />
+    <meta name="description" content="portfolio" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,35 +16,35 @@
     crossorigin="anonymous"
   ></script>
     <link rel="stylesheet" href="styles.css" />
-    <title>Home</title>
-    <link rel="icon" type="image/x-icon" href="attachments/faviconv1.png">
+    <title>home</title>
+    <link rel="icon" type="image/x-icon" href="attachments/favlight.png">
   </head>
-  <body class="dark" id="top">
+  <body class="light" id="top">
     <header class="header center">
       <h3>
         <a href="./index.html" class="link"
-          >JC.</a
+          >jc.</a
         >
       </h3>
 
       <nav class="nav center">
         <ul class="nav__list center">
           <li class="nav__list-item">
-            <a class="link link--nav" href="./experience.html">Experience</a>
+            <a class="link link--nav" href="./experience.html">experience</a>
           </li>
           <li class="nav__list-item">
-            <a class="link link--nav" href="./projects.html">Projects</a>
+            <a class="link link--nav" href="./projects.html">projects</a>
           </li>
           <li class="nav__list-item">
-            <a class="link link--nav" href="./about.html">About</a>
+            <a class="link link--nav" href="./about.html">about</a>
           </li>
           <li class="nav__list-item">
-            <a class="link link--nav" href="mailto:jalen.cheng@uwaterloo.ca">Contact</a>
+            <a class="link link--nav" href="mailto:jalen.cheng@uwaterloo.ca">contact</a>
           </li>
         </ul>
 
         <button type="button" aria-label="toggle theme" class="btn btn--icon">
-          <i aria-hidden="true" id="btn-theme" class="fas fa-moon"></i>
+          <i aria-hidden="true" id="btn-theme" class="fas fa-sun"></i>
         </button>
 
         <button
@@ -59,16 +59,19 @@
 
     <main>
       <!-- About -->
-      <div class="about center">
-        <h1>Hi, I am <span class="about__name">Jalen Cheng.</span></h1>
+      <div class="about center fade-in">
+        <h1>hi, i am <span class="about__name">jalen cheng.</span></h1>
         <h2><div id="name"></div></h2>
+        
+        <!--
         <p class="about__desc">
-          As a computer engineering student at the University of Waterloo, I strive to challenge myself and drive real impact in the world. <span class="about__name">Take a look around.</span>
+          as a computer engineering student at the university of waterloo, i strive to challenge myself and drive real impact in the world. <span class="about__name">take a look around.</span>
         </p>
+        -->
 
         <div class="about__contact center">
-          <a href="attachments/Cheng, Jalen Resume.pdf" target="_blank">
-            <span class="btn btn--outline">Resume</span>
+          <a href="attachments/Cheng, Jalen.pdf" target="_blank">
+            <span class="btn btn--outline">resume</span>
           </a>
 
           <a
@@ -92,29 +95,29 @@
 
   <section class="section" id="hep">
     <div class="hep__grid">
-        <a href = "experience.html">
-          <div class="hep">
+        <a href="experience.html">
+          <div class="hep fade-in">
             <h3>growing.</h3>
             <p class="hep__description">
-              How can I leverage my work experience for success?
+              how can i leverage my work experience for success?
             </p>
           </div>
         </a>
 
-      <a href = "projects.html">
-        <div class="hep">
+      <a href="projects.html">
+        <div class="hep fade-in">
           <h3>creating.</h3>
           <p class="hep__description">
-            How can I apply my learned knowledge to innovate?
+            how can i apply my learned knowledge to innovate?
           </p>
         </div>
       </a>
 
-      <a href = "about.html">
-          <div class="hep">
+      <a href="about.html">
+          <div class="hep fade-in">
             <h3>improving.</h3>
             <p class="hep__description">
-              How can I better myself to make the future brighter?
+              how can i better myself to make the future brighter?
             </p>
           </div>
         </a>
@@ -126,7 +129,7 @@
         href="https://github.com/jalen-cheng/website"
         class="link footer__link"
       >
-        Created By Jalen Cheng
+        created by jalen cheng
       </a>
     </footer>
 
