--- a/website/projects.html
+++ b/website/projects.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Portfolio" />
+    <meta name="description" content="portfolio" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,35 +15,35 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles.css" />
-    <title>Projects</title>
-    <link rel="icon" type="image/x-icon" href="attachments/faviconv1.png">
+    <title>projects</title>
+    <link rel="icon" type="image/x-icon" href="attachments/favlight.png">
   </head>
-  <body class="dark" id="top">
+  <body class="light" id="top">
     <header class="header center">
       <h3>
-        <a href="./index.html" class="link">JC.</a>
+        <a href="./index.html" class="link">jc.</a>
       </h3>
 
       <nav class="nav center">
         <ul class="nav__list center">
           <li class="nav__list-item">
-            <a class="link link--nav" href="./experience.html">Experience</a>
+            <a class="link link--nav" href="./experience.html">experience</a>
           </li>
           <li class="nav__list-item">
-            <a class="link link--nav" href="./projects.html">Projects</a>
+            <a class="link link--nav" href="./projects.html">projects</a>
           </li>
           <li class="nav__list-item">
-            <a class="link link--nav" href="./about.html">About</a>
+            <a class="link link--nav" href="./about.html">about</a>
           </li>
           <li class="nav__list-item">
             <a class="link link--nav" href="mailto:jalen.cheng@uwaterloo.ca"
-              >Contact</a
+              >contact</a
             >
           </li>
         </ul>
 
         <button type="button" aria-label="toggle theme" class="btn btn--icon">
-          <i aria-hidden="true" id="btn-theme" class="fas fa-moon"></i>
+          <i aria-hidden="true" id="btn-theme" class="fas fa-sun"></i>
         </button>
 
         <button
@@ -56,22 +56,22 @@
       </nav>
     </header>
 
-      <section class="fade-in">
-        <h2 class="section__title">Projects</h2>
+      <section class="section fade-in">
+        <h2 class="section__title">projects</h2>
 
         <div class="hep__grid"> <!--What's on my mind: Building, Learning, Growing-->
           <div class="hep">
-            <h3>EasyASL</h3>
+            <h3>easyasl</h3>
             <p class="hep__description">
-              Hackathon winner accomplished within 36 hours. 
-              EasyASL provides a comprehensive tool for the hard-of-hearing community and other individuals who use American Sign Language (ASL). 
-              EasyASL makes it easy for you to learn with a reference index, translate in real time, and get certified in a secure database via randomized testing.
+              hackathon winner accomplished within 36 hours. 
+              easyasl provides a comprehensive tool for the hard-of-hearing community and other individuals who use american sign language (asl). 
+              easyasl makes it easy for you to learn with a reference index, translate in real time, and get certified in a secure database via randomized testing.
             </p>
             <ul class="hep__stack">
-              <li class="hep__stack-item">Next.js</li>
-              <li class="hep__stack-item">TypeScript</li>
-              <li class="hep__stack-item">React</li>
-              <li class="hep__stack-item">Figma</li>
+              <li class="hep__stack-item">typescript</li>
+              <li class="hep__stack-item">next.js</li>
+              <li class="hep__stack-item">react</li>
+              <li class="hep__stack-item">figma</li>
             </ul>
 
             <a
@@ -91,16 +91,16 @@
           </div>
 
           <div class="hep">
-            <h3>IFDAA (in progress)</h3>
+            <h3>lunero</h3>
             <p class="hep__description">
-              Personal project completed for ECE198 course. The Intelligent Fall Detection Alert Apparatus (IFDAA) provides a robust, cost-effective solution for at-risk individuals.
-              As an AIO patient care device, it can successfully detect, communicate and log falls for optimal wellbeing. Developed using 2 STM32F401RE Nucleo boards and a custom-modelled case. 
-
+                full-stack webapp to aid prospective home buyers in finding their perfect realtor match with a prioprietary AI matching algorithm,,
+                all while saving money on commission fees. on the flip side, realtors get access to real customers - not just "leads".
+                chosen as 1 of 300+ applicants to launchpoint program. pitched to vc's from a16z, sequoia & more. 200+ waitlisted users.
             </p>
             <ul class="hep__stack">
-              <li class="hep__stack-item">C++</li>
-              <li class="hep__stack-item">AutoDesk Fusion</li>
-              <li class="hep__stack-item">draw.io</li>
+              <li class="hep__stack-item">typescript</li>
+              <li class="hep__stack-item">supabase</li>
+              <li class="hep__stack-item">postgresql</li>
             </ul>
 
             <a
@@ -111,7 +111,7 @@
               <i aria-hidden="true" class="fab fa-github"></i>
             </a>
             <a
-              href="https://example.com"
+              href="https://lunero.ca"
               aria-label="live preview"
               class="link link--icon"
             >
@@ -122,14 +122,14 @@
           <div class="hep">
             <h3>ecoswitch</h3>
             <p class="hep__description">
-              Hackathon project completed in under 24 hours. ecoswitch serves as a flexible universal webapp to scan any UPC barcode item, and determine its sustainability with 3 metrics. It also has the ability to webscrape for better alternatives, grade a company on monetized environmental impact, and parse/summarize relevant articles.
+              hackathon project completed in under 24 hours. ecoswitch serves as a flexible universal webapp to scan any upc barcode item, and determine its sustainability with 3 metrics. it also has the ability to webscrape for better alternatives, grade a company on monetized environmental impact, and parse/summarize relevant articles.
             </p>
             <ul class="hep__stack">
-              <li class="hep__stack-item">TypeScript</li>
-              <li class="hep__stack-item">Node.JS</li>
-              <li class="hep__stack-item">React</li>
-              <li class="hep__stack-item">Unwrangle API</li>
-              <li class="hep__stack-item">OpenAI API</li>
+              <li class="hep__stack-item">typescript</li>
+              <li class="hep__stack-item">node.js</li>
+              <li class="hep__stack-item">react</li>
+              <li class="hep__stack-item">unwrangle api</li>
+              <li class="hep__stack-item">openai api</li>
             </ul>
 
             <a
@@ -155,7 +155,7 @@
         href="https://github.com/jalen-cheng/website"
         class="link footer__link"
       >
-        Created By Jalen Cheng
+        created by jalen cheng
       </a>
     </footer>
 
