--- a/website/experience.html
+++ b/website/experience.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Portfolio" />
+    <meta name="description" content="portfolio" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,36 +15,36 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles.css" />
-    <title>Experience</title>
-    <link rel="icon" type="image/x-icon" href="attachments/faviconv1.png">
+    <title>experience</title>
+    <link rel="icon" type="image/x-icon" href="attachments/favlight.png">
   </head>
 
-  <body class="dark" id="top">
+  <body class="light" id="top">
     <header class="header center">
       <h3>
-        <a href="./index.html" class="link">JC.</a>
+        <a href="./index.html" class="link">jc.</a>
       </h3>
 
       <nav class="nav center">
         <ul class="nav__list center">
           <li class="nav__list-item">
-            <a class="link link--nav" href="./experience.html">Experience</a>
+            <a class="link link--nav" href="./experience.html">experience</a>
           </li>
           <li class="nav__list-item">
-            <a class="link link--nav" href="./projects.html">Projects</a>
+            <a class="link link--nav" href="./projects.html">projects</a>
           </li>
           <li class="nav__list-item">
-            <a class="link link--nav" href="./about.html">About</a>
+            <a class="link link--nav" href="./about.html">about</a>
           </li>
           <li class="nav__list-item">
             <a class="link link--nav" href="mailto:jalen.cheng@uwaterloo.ca"
-              >Contact</a
+              >contact</a
             >
           </li>
         </ul>
 
         <button type="button" aria-label="toggle theme" class="btn btn--icon">
-          <i aria-hidden="true" id="btn-theme" class="fas fa-moon"></i>
+          <i aria-hidden="true" id="btn-theme" class="fas fa-sun"></i>
         </button>
 
         <button
@@ -59,48 +59,50 @@
 
     <!-- EXPERIENCE SECTION -->
     <section class="section fade-in spacer">
-      <h2 class="section__title">Experience</h2>
+      <h2 class="section__title">experience</h2>
 
       <!-- Experience Card 1 -->
       <div class="hep" onclick="openModal('modal1')">
-        <h3>Example 1</h3>
-        <p class="hep__description">Click here for more details.</p>
+        <h3>???</h3>
+        <p class="hep__description">???</p>
       </div>
 
       <!-- Experience Card 2 -->
       <div class="hep" onclick="openModal('modal2')">
-        <h3>Example 2</h3>
-        <p class="hep__description">Click here for more details.</p>
+        <h3>general dynamics (engineering specialist / avionics technician)</h3>
+        <p class="hep__description">click here for more details.</p>
       </div>
 
       <!-- Experience Card 3 -->
       <div class="hep" onclick="openModal('modal3')">
-        <h3>Example 3</h3>
-        <p class="hep__description">Click here for more details.</p>
+        <h3>cghm (research assistant)</h3>
+        <p class="hep__description">click here for more details.</p>
       </div>
 
-      <!-- Experience Card 4 -->
-      <div class="hep" onclick="openModal('modal4')">
-        <h3>Example 4</h3>
-        <p class="hep__description">Click here for more details.</p>
-      </div>
     </section>
 
     <!-- TECHNICAL SKILLS SECTION -->
     <section class="section">
-      <h2 class="section__title">Technical Skills</h2>
+      <h2 class="section__title">technical skills</h2>
       <ul class="skills__list">
-        <li class="skills__list-item btn btn--plain">C++</li>
-        <li class="skills__list-item btn btn--plain">HTML</li>
-        <li class="skills__list-item btn btn--plain">CSS</li>
-        <li class="skills__list-item btn btn--plain">JavaScript</li>
-        <li class="skills__list-item btn btn--plain">TypeScript</li>
-        <li class="skills__list-item btn btn--plain">React</li>
-        <li class="skills__list-item btn btn--plain">Figma</li>
-        <li class="skills__list-item btn btn--plain">Git</li>
-        <li class="skills__list-item btn btn--plain">OpenAI API</li>
-        <li class="skills__list-item btn btn--plain">Cloud API</li>
-        <li class="skills__list-item btn btn--plain">PicsArt API</li>
+        <li class="skills__list-item btn btn--plain">c++</li>
+        <li class="skills__list-item btn btn--plain">python</li>
+        <li class="skills__list-item btn btn--plain">html</li>
+        <li class="skills__list-item btn btn--plain">typescript</li>
+        <li class="skills__list-item btn btn--plain">vhdl</li>
+        <li class="skills__list-item btn btn--plain">react</li>
+        <li class="skills__list-item btn btn--plain">firebase</li>
+        <li class="skills__list-item btn btn--plain">postgresql</li>
+        <li class="skills__list-item btn btn--plain">aws</li>
+        <li class="skills__list-item btn btn--plain">git</li>
+        <li class="skills__list-item btn btn--plain">sharepoint</li>
+        <li class="skills__list-item btn btn--plain">cURL</li>
+        <li class="skills__list-item btn btn--plain">openai api</li>
+        <li class="skills__list-item btn btn--plain">rest api</li>
+        <li class="skills__list-item btn btn--plain">oslc api</li>
+        <li class="skills__list-item btn btn--plain">figma</li>
+        <li class="skills__list-item btn btn--plain">powerbi</li>
+        <li class="skills__list-item btn btn--plain">excel</li>
       </ul>
     </section>
 
@@ -110,7 +112,7 @@
         href="https://github.com/jalen-cheng/website"
         class="link footer__link"
       >
-        Created By Jalen Cheng
+        created by jalen cheng
       </a>
     </footer>
 
@@ -127,10 +129,10 @@
     <div id="modal1" class="modal">
       <div class="modal-content">
         <span class="close" onclick="closeModal('modal1')">&times;</span>
-        <h3>Experience 1</h3>
+        <h3>???</h3>
         <p>
           <!-- You can place the content from experience1.html here -->
-          Here’s a deeper dive into Experience 1.
+          i need a job pls let me know if you can help :pray:
         </p>
       </div>
     </div>
@@ -138,10 +140,9 @@
     <div id="modal2" class="modal">
       <div class="modal-content">
         <span class="close" onclick="closeModal('modal2')">&times;</span>
-        <h3>Experience 2</h3>
+        <h3>01/06/2025 - 04/25/2025</h3>
         <p>
-          <!-- You can place the content from experience2.html here -->
-          Details about Experience 2 go here.
+          contributed to development of phase 2 for GD's MAISR ISS program.
         </p>
       </div>
     </div>
@@ -149,53 +150,14 @@
     <div id="modal3" class="modal">
       <div class="modal-content">
         <span class="close" onclick="closeModal('modal3')">&times;</span>
-        <h3>Experience 3</h3>
+        <h3>01/01/2024 - 03/21/2024</h3>
         <p>
-          <!-- You can place the content from experience3.html here -->
-          Extended details on Experience 3.
+          collaborated with professors and students from UofI & UofU to train a model 
+          to detect and classify cancerous cells & fractured bones. pending publication as a co-author.
         </p>
       </div>
     </div>
 
-    <div id="modal4" class="modal">
-      <div class="modal-content">
-        <span class="close" onclick="closeModal('modal4')">&times;</span>
-        <h3>Experience 4</h3>
-        <p>
-          <!-- You can place the content from experience4.html here -->
-          Whatever you want to say about Experience 4.
-        </p>
-      </div>
-    </div>
-
-    <!-- Your existing script for toggling theme, nav, etc. -->
     <script src="./script.js"></script>
-
-    <!-- Minimal modal script to open/close -->
-    <script>
-      function openModal(modalId) {
-        const modal = document.getElementById(modalId);
-        if (modal) {
-          modal.style.display = "block";
-        }
-      }
-
-      function closeModal(modalId) {
-        const modal = document.getElementById(modalId);
-        if (modal) {
-          modal.style.display = "none";
-        }
-      }
-
-      // OPTIONAL: Close modal if user clicks anywhere outside of it
-      window.onclick = function (event) {
-        const modals = document.getElementsByClassName("modal");
-        for (let i = 0; i < modals.length; i++) {
-          if (event.target === modals[i]) {
-            modals[i].style.display = "none";
-          }
-        }
-      };
-    </script>
   </body>
 </html>
