--- a/website/experience.html
+++ b/website/experience.html
@@ -75,7 +75,7 @@
 
       <!-- Experience Card 3 -->
       <div class="hep" onclick="openModal('modal3')">
-        <h3>cghm (research assistant)</h3>
+        <h3>cgmh (research assistant)</h3>
         <p class="hep__description">click here for more details.</p>
       </div>
 
@@ -152,8 +152,8 @@
         <span class="close" onclick="closeModal('modal3')">&times;</span>
         <h3>01/01/2024 - 03/21/2024</h3>
         <p>
-          collaborated with professors and students from UofI & UofU to train a model 
-          to detect and classify cancerous cells & fractured bones. pending publication as a co-author.
+          collaborated with professors and students from UofI & UofU + doctors at collingwood general & marine hospital to train a deep learning model. 
+          could accurately detect or classify cancerous cells & fractured bones at a 83%+ rate. paper pending publication as a listed co-author.
         </p>
       </div>
     </div>
