Fixed mobile compatibility issues and minor text issues.

--- a/website/experience.html
+++ b/website/experience.html
@@ -129,7 +129,7 @@
     <div id="modal1" class="modal">
       <div class="modal-content">
         <span class="close" onclick="closeModal('modal1')">&times;</span>
-        <h3>???</h3>
+        <h3>winter 2026</h3>
         <p>
           <!-- You can place the content from experience1.html here -->
           i need a job pls let me know if you can help :pray:
